# deep_agent_experiement

./: .gitignore  AGENTS.md  README.md  agent.py  app.py  pyproject.toml
skills/research/: SKILL.md
skills/writer/: SKILL.md
src/: state.py
src/core/: agent_factory.py  guardrails.py  memory.py  rag.py
src/nodes/: plan.py  research.py  review.py  write.py
